getting started 2nd update

--- a/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
+++ b/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
@@ -12,7 +12,7 @@ language: julia
         <h2 >Installation</h2>
         <div class="content-box">
             <p >
-                Install using Julia's <code>Pkg</code> module. From the Julia REPL, do:
+                Install using Julia's <code class="no-padding">Pkg</code> module. From the Julia REPL, do:
             </p>
 
             <pre><code>Pkg.clone("https://github.com/plotly/Plotly.jl")</code></pre>
@@ -54,20 +54,20 @@ language: julia
             
                 <p >Don't know your API key?
                     <div>
-                        <a href="plot.ly/plot" class="button no_underline" id="display_key">Display Key</div>
+                        <a href="plot.ly/plot" class="button no_underline" id="display_key">Display Key</a>
 
 
                     </div>
                 </p>
-            <h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
-<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
+            </br><h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+			<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
+			</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
-<p>In your Terminal, enter:<p>
-<pre><code class="terminal">
-$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
-</code></pre>
+			<p>In your Terminal, enter:<p>
+			<pre><code class="terminal">
+			$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
+			plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
+			</code></pre>
 
             <p >
                It is also possible to save your user credentials for future Julia sessions. In your Julia terminal, enter:
@@ -84,7 +84,7 @@ Plotly.set_credentials_file({"username"=>"DemoAccount","api_key"=>"lr1c37zw81"})
         <h2 >Start plotting!</h2>
         <div class="content-box">
             <p >
-                Now you can make a simple API call using <code>Plotly.plot()</code>, and create your first graph!
+                Now you can make a simple API call using <code class="no-padding">Plotly.plot()</code>, and create your first graph!
             </p>
 
             <pre><code>x = [0,1,2,3,4]
