--- a/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
+++ b/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-name: Getting Started: Plotly for Matplotlib
+name: Getting Started Plotly for Matplotlib
 permalink: matplotlib/getting-started
 description: Plotly's Matplotlib graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
@@ -60,9 +60,9 @@ $ python -c "import plotly; plotly.tools.set_credentials_file(username='DemoAcco
                 </p>
             
 
-            <h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+            </br><h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 			<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-			<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
+			</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
 			<p>In your Terminal, enter:<p>
 			<pre><code class="terminal">
