--- a/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
+++ b/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
@@ -18,22 +18,22 @@ language: r
         <h2 >Installation</h2>
         <div class="content-box">
             <p >
-                First, install and load the <code>devtools</code> package. From within the R console, enter:
+                First, install and load the <code class="no-padding">devtools</code> package. From within the R console, enter:
             </p>
 
-            <pre >install.packages("devtools")
-library("devtools")</pre>
+            <pre><code>install.packages("devtools")
+library("devtools")</code></pre>
 
             <p >
                 Next, install plotly. From within the R console, enter:
             </p>
 
-            <pre >install_github("ropensci/plotly")</pre>
+            <pre><code>install_github("ropensci/plotly")</code></pre>
 
             <p >
                 Plotly's R package is updated frequently! To upgrade, just re-install:
             </p>
-            <pre >devtools::install_github("ropensci/plotly")</pre>
+            <pre><code>devtools::install_github("ropensci/plotly")</code></pre>
 
         </div>
     </section>
@@ -45,25 +45,25 @@ library("devtools")</pre>
                 In the R console, import the Plotly R library.
             </p>
 
-            <pre >library(plotly)</pre>
+            <pre><code>library(plotly)</code></pre>
 
             <p >This will print:</p>
 
-            <pre >Loading required package: RCurl
+            <pre><code>Loading required package: RCurl
 Loading required package: bitops
 Loading required package: RJSONIO
-Loading required package: ggplot2</pre>
+Loading required package: ggplot2</code></pre>
 
             <br>
             <p >
                 Next, set your Plotly user credentials!
             </p>
 			<p>
-                    You'll need to replace <code>"DemoAccount"</code> and <code>"lr1c37zw81"</code> with your Plotly username and API-key.
+                    You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and API-key.
              </p>
             
 
-            <pre >set_credentials_file("DemoAccount", "lr1c37zw81")</pre>
+            <pre><code>set_credentials_file("DemoAccount", "lr1c37zw81")</code></pre>
 
             <p >
                 You only have to set this up if it's your first time using a Plotly API!
@@ -75,15 +75,15 @@ Loading required package: ggplot2</pre>
                     </div>
              </p>
 
-            <h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+            </br><h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 			<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-			<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
+			</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
 			<p>In your Terminal, enter:<p>
 			<pre><code class="terminal">
 			$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
 			plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
-			</code></pre>
+			</code></code></pre>
 
         </div>
     </section>
@@ -95,14 +95,14 @@ Loading required package: ggplot2</pre>
                 Initialize a Plotly object:
             </p>
 
-            <pre >py &lt;- plotly()</pre>
+            <pre><code>py &lt;- plotly()</code></pre>
 
             <p >
-                Now you can make interactive, online graphs syntax using <code>py$plotly()</code>.
+                Now you can make interactive, online graphs syntax using <code class="no-padding">py$plotly()</code>.
             </p>
 
 
-            <pre >trace0 &lt;- list(
+            <pre><code>trace0 &lt;- list(
 x = c(1, 2, 3, 4),
 y = c(10, 15, 13, 17)
 )
@@ -110,14 +110,14 @@ trace1 &lt;- list(
 x = c(1, 2, 3, 4),
 y = c(16, 5, 11, 9)
 )
-response &lt;- py$plotly(trace0, trace1, kwargs=list(filename="basic-line", fileopt="overwrite"))</pre>
+response &lt;- py$plotly(trace0, trace1, kwargs=list(filename="basic-line", fileopt="overwrite"))</code></pre>
 
 
             <p >
                 Your online, interactive, collaborative plot lives at this URL:
             </p>
 
-            <pre >response$url</pre>
+            <pre><code>response$url</code></pre>
 
             <p >
                 Do you use ggplot2? See some ggplot2 examples in our <a class="link--bold link--impt" href="/ggplot2">ggplot2 documentation</a>.
@@ -140,13 +140,13 @@ response &lt;- py$plotly(trace0, trace1, kwargs=list(filename="basic-line", file
                 directory. Your <strong>~/.plotly/.credentials</strong> file
                 should look something like this:
             </p>
-            <pre >
+            <pre><code>
 {
     "username": "DemoAccount",
     "stream_ids": ["ylosqsyet5", "h2ct8btk1s", "oxz4fm883b"],
     "api_key": "lr1c37zw81"
 }
-            </pre>
+            </code></pre>
             <p >
                 You can change the contents of this file manually or as
                 described in the <strong>Initialization</strong> section.
