--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -1,5 +1,5 @@
  ---
-title: Getting Started Plotly for MATLAB
+name: Getting Started Plotly for MATLAB
 permalink: matlab/getting-started
 description: Plotly's MATLAB graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
@@ -36,10 +36,10 @@ language: matlab
 			<div>
 			<a class="button no_underline" href="plot.ly/plot">DISPLAY KEY</a>
 			</div>
-			
+			</br>
 				<h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-				<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
+				</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
 				<p>In your Terminal, enter:<p>
 				<pre><code class="terminal">
