--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -56,9 +56,9 @@ $ python -c "import plotly; plotly.tools.set_credentials_file(username='DemoAcco
 
                     </div>
                 </p>
-				<h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+				</br><h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-				<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
+				</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
 				<p>In your Terminal, enter:<p>
 				<pre><code class="terminal">
