getting started 3rd update

--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -24,7 +24,7 @@ language: python
             <pre><code>$ sudo pip install plotly</code></pre>
 
             <p >
-                If you don't have <strong>pip</strong> installed on your machine, <a class="link--bold link--impt" href="https://pip.pypa.io/en/latest/installing.html" target="_blank">click here</a> for pip's installation instructions.
+                If you don't have <strong>pip</strong> installed on your machine, <a href="https://pip.pypa.io/en/latest/installing.html" target="_blank">click here</a> for pip's installation instructions.
             </p>
 
             <p >
@@ -56,7 +56,7 @@ $ python -c "import plotly; plotly.tools.set_credentials_file(username='DemoAcco
 
                     </div>
                 </p>
-				</br><h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+				</br><h6>Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
 				</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
@@ -100,7 +100,7 @@ data = Data([trace0, trace1])
 unique_url = py.plot(data, filename = 'basic-line')</code></pre>
 
             <p >
-                You can also create plotly graphs with <strong>matplotlib</strong> syntax. Learn more in our <a class="link--bold link--impt" href="/matplotlib/">matplotlib documentation</a>.
+                You can also create plotly graphs with <strong>matplotlib</strong> syntax. Learn more in our <a href="{{ site.baseurl }}/matplotlib/">matplotlib documentation</a>.
             </p>
             <p >
                 You can also create plotly graphs within an <strong>IPython
