--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ title: Plotly API
 
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Enterprise graphing</h6>
-					<a href="{{ site.baseurl }}/plotly_js"  class="button no_underline centeredsmall">Plotly.js</a>
+					<a href="{{ site.baseurl }}/javascript-graphing-library"  class="button no_underline centeredsmall">Plotly.js</a>
 					<br>
 					<div>
 						<p>The client-side interactive JavaScript library that powers Plotly.</p>
