--- a/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
+++ b/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
@@ -79,7 +79,7 @@ library("devtools")</code></pre>
 
                     </div>
                 </p>
-				</br><h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+				</br><h6>Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
 				</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
