--- a/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
+++ b/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
@@ -38,7 +38,7 @@ language: julia
             </p>
             
                 <p >
-                    You'll need to replace <code>"DemoAccount"</code> and <code>"lr1c37zw81"</code> with your Plotly username and API-key.
+                    You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and API-key.
                 </p>
             
 
@@ -59,7 +59,7 @@ language: julia
 
                     </div>
                 </p>
-            </br><h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+            </br><h6>Special Instructions for <a  class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 			<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
 			</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
