--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -37,7 +37,7 @@ language: matlab
 			<a class="button no_underline" href="plot.ly/plot">DISPLAY KEY</a>
 			</div>
 			</br>
-				<h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+				<h6>Special Instructions for <a class="no_underline" href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
 				</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
@@ -45,7 +45,7 @@ language: matlab
 				<pre><code class="terminal">
 				$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
 				plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
-				</code></code></pre>
+				</code></pre>
             
 
             
