--- a/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
+++ b/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
@@ -75,7 +75,7 @@ Loading required package: ggplot2</code></pre>
                     </div>
              </p>
 
-            </br><h6>Special Instructions for <a href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+            </br><h6>Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 			<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
 			</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
@@ -120,7 +120,7 @@ response &lt;- py$plotly(trace0, trace1, kwargs=list(filename="basic-line", file
             <pre><code>response$url</code></pre>
 
             <p >
-                Do you use ggplot2? See some ggplot2 examples in our <a class="link--bold link--impt" href="/ggplot2">ggplot2 documentation</a>.
+                Do you use ggplot2? See some ggplot2 examples in our <a class="link--bold link--impt" href="{{ site.baseurl }}/ggplot2">ggplot2 documentation</a>.
             </p>
 
         </div>
