--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -1,7 +1,7 @@
- ---
-name: Getting Started Plotly for MATLAB
+---
+name:  Getting Started Plotly for MATLAB
 permalink: matlab/getting-started
-description: Plotly's MATLAB graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
+description: Getting Started with Plotly for MATLAB.
 layout: getstart
 language: matlab
 ---
