--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ title: Plotly API
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/layout_block.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/modules.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/state.css">
+	
+	<!-- JQUERY Library -->
+	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   
 	<!-- Icon -->
 	<link rel="shortcut icon" href="{{ site.baseurl }}/images/plotly-ico.png" type="image/x-icon" />
@@ -27,10 +31,10 @@ title: Plotly API
 
 	</head>
   <body>
-	{% include header.html %}
+	{% include first-header.html %}
 	
 	
-	<div class="api-splash row">
+	<div class="api-splash row" id="herobanner">
 		<h1 class="white">Plotly API libraries</h1>
 		<h4 class="white">D3.js plots and dashboards for Python, MATLAB, R and more</h4>
 	</div>
@@ -143,5 +147,10 @@ title: Plotly API
 	
 	
 	{% include footer.html %}  
+
+
+		<!-- Header bar Script -->
+  	<script src="{{ site.baseurl }}/javascripts/smoothheader.js"></script>
+	
   </body>
 </html>
