--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -21,7 +21,7 @@ language: matlab
         <h2 >Initialization</h2>
         <div class="content-box">
             <p >
-                In your MATLAB console, begin by locating the downloaded directory, and running <code>plotlysetup()</code>.
+                In your MATLAB console, begin by locating the downloaded directory, and running <code class="no-padding">plotlysetup()</code>.
             </p>
             <p >
                 
@@ -43,8 +43,8 @@ language: matlab
 
 				<p>In your Terminal, enter:<p>
 				<pre><code class="terminal">
-				$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-				plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
+$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
+plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
 				</code></pre>
             
 
@@ -62,7 +62,7 @@ language: matlab
         <h2 >Start plotting!</h2>
         <div class="content-box">
             <p >
-                Now you can convert your MATLAB figures into beautiful, interactive, online graphs with <code>fig2plotly()</code>:
+                Now you can convert your MATLAB figures into beautiful, interactive, online graphs with <code class="no-padding">fig2plotly()</code>:
             </p>
 
             <pre><code>[X,Y,Z] = peaks;
@@ -71,7 +71,7 @@ contour(X,Y,Z,20);
 fig2plotly()</code></pre>
 
             <p >
-                  Note: <code>fig2plotly()</code> will render your plot using Plotly's own color and styling by default. To preserve your original MATLAB color and styling, use: <code>fig2plotly(gcf,'strip',false)</code>.
+                  Note: <code class="no-padding">fig2plotly()</code> will render your plot using Plotly's own color and styling by default. To preserve your original MATLAB color and styling, use: <code class="no-padding">fig2plotly(gcf,'strip',false)</code>.
             </p>
         </div>
     </section>
