--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -34,12 +34,12 @@ language: matlab
                 This will set up your credentials and import the Plotly library into your MATLAB toolboxes. You can now delete the downloaded folder!
             </p>
 			<div>
-			<a class="button no_underline" href="plot.ly/plot">DISPLAY KEY</a>
+			<a class="button no_underline" href="https://plot.ly/plot">DISPLAY KEY</a>
 			</div>
-			</br>
+			<br>
 				<h6>Special Instructions for <a class="no_underline" href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-				</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
+				<br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
 				<p>In your Terminal, enter:<p>
 				<pre><code class="terminal">
