--- a/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
+++ b/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
@@ -44,10 +44,11 @@ library("devtools")</code></pre>
 
             <p >This will print:</p>
 
-            <pre><code>Loading required package: RCurl
-				Loading required package: bitops
-				Loading required package: RJSONIO
-				Loading required package: ggplot2</code></pre>
+            <pre><code>
+Loading required package: RCurl
+Loading required package: bitops
+Loading required package: RJSONIO
+Loading required package: ggplot2</code></pre>
 
         </div>
     </section>
@@ -74,19 +75,19 @@ library("devtools")</code></pre>
             
                 <p >Don't know your API key? If you don't have an account, you will be prompted to sign up.
                     <div>
-                        <a href="plot.ly/workspace" class="button no_underline">Display Key</a>
+                        <a href="https://plot.ly/plot" class="button no_underline">Display Key</a>
 
 
                     </div>
                 </p>
-				</br><h6>Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
+				<br><h6>Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
 				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-				</br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
+				<br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
-				<p>In your Terminal, enter:<p>
+				<br><p>In your Terminal, enter:<p>
 				<pre><code class="terminal">
-				$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-				plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
+$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
+plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
 				</code></pre>
             
 
