--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@ title: Plotly API
     <head>
 
 	<!-- Fonts -->
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/fonts/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/plotly_icons.css" />
+	<link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/plotly_icons.css" />
     <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
   	
     	
 	<!-- Stytlesheets -->
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/base.css">
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/layout_block.css">
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/modules.css">
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/state.css">
+	<link rel="stylesheet" type="text/css" href="/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="/css/base.css">
+	<link rel="stylesheet" type="text/css" href="/css/layout_block.css">
+	<link rel="stylesheet" type="text/css" href="/css/modules.css">
+	<link rel="stylesheet" type="text/css" href="/css/state.css">
 	
 	<!-- JQUERY Library -->
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   
 	<!-- Icon -->
-	<link rel="shortcut icon" href="{{ site.baseurl }}/images/plotly-ico.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon" />
 	 
 	<!-- META TAGS -->
 	{% include seo.html %}
@@ -44,25 +44,25 @@ title: Plotly API
 					<h3 class="centered">Download free clients for</h3>
 				</div>
 				<div class="row">
-					<a href="{{ site.baseurl }}/python/getting-started/"><div class="two columns offset-by-three categories-apis" onmouseover="movingInImgOp(pythonapi_img, pythonapi_text)" onmouseout="movingOutImgOp(pythonapi_img, pythonapi_text)">
+					<a href="/python/getting-started/"><div class="two columns offset-by-three categories-apis" onmouseover="movingInImgOp(pythonapi_img, pythonapi_text)" onmouseout="movingOutImgOp(pythonapi_img, pythonapi_text)">
 						<div id="pythonapi_img">
-							<img src="{{ site.baseurl }}/images/python-small.png" alt="python">
+							<img src="/images/python-small.png" alt="python">
 						</div>
 						<div id="pythonapi_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly Python API</h6>
 						</div>
 					</div></a>
-					<a href="{{ site.baseurl }}/matlab/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi_img, matlabapi_text)" onmouseout="movingOutImgOp(matlabapi_img, matlabapi_text)">
+					<a href="/matlab/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi_img, matlabapi_text)" onmouseout="movingOutImgOp(matlabapi_img, matlabapi_text)">
 						<div id="matlabapi_img">
-							<img src="{{ site.baseurl }}/images/MATLAB-small.png" alt="MATLAB">
+							<img src="/images/MATLAB-small.png" alt="MATLAB">
 						</div>
 						<div id="matlabapi_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly MATLAB API</h6>
 						</div>
 					</div></a>
-					<a href="{{ site.baseurl }}/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r_api_img, r_api_text)" onmouseout="movingOutImgOp(r_api_img, r_api_text)">
+					<a href="/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r_api_img, r_api_text)" onmouseout="movingOutImgOp(r_api_img, r_api_text)">
 						<div id="r_api_img">
-							<img src="{{ site.baseurl }}/images/r-small.png" alt="R">
+							<img src="/images/r-small.png" alt="R">
 						</div>
 						<div id="r_api_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly R API</h6>
@@ -79,11 +79,11 @@ title: Plotly API
 				<!-- SCIENTIFIC GRAPHING -->
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Scientific graphing</h6>
-					<a href="{{ site.baseurl }}/python" class="button no_underline centeredsmall">Python</a>
-					<a href="{{ site.baseurl }}/matlab" class="button no_underline centeredsmall">MATLAB</a>
-					<a href="{{ site.baseurl }}/r"  class="button no_underline centeredsmall">R</a>
-					<a href="{{ site.baseurl }}/node_js"  class="button no_underline centeredsmall">Node.js</a>
-					<a href="{{ site.baseurl }}/julia"  class="button no_underline centeredsmall">Julia</a>
+					<a href="/python" class="button no_underline centeredsmall">Python</a>
+					<a href="/matlab" class="button no_underline centeredsmall">MATLAB</a>
+					<a href="/r"  class="button no_underline centeredsmall">R</a>
+					<a href="/node_js"  class="button no_underline centeredsmall">Node.js</a>
+					<a href="/julia"  class="button no_underline centeredsmall">Julia</a>
 					<a href="https://plot.ly/product/excel-add-in/"  class="button no_underline centeredsmall">Excel</a>
 					<br>
 					<div>
@@ -95,8 +95,8 @@ title: Plotly API
 
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Figure converters</h6>
-					<a href="{{ site.baseurl }}/matplotlib/"  class="button no_underline centeredsmall">matplotlib</a>
-					<a href="{{ site.baseurl }}/ggplot2/"  class="button no_underline centeredsmall">ggplot2</a>
+					<a href="/matplotlib/"  class="button no_underline centeredsmall">matplotlib</a>
+					<a href="/ggplot2/"  class="button no_underline centeredsmall">ggplot2</a>
 					<a href="https://github.com/plotly/Igor-Pro-Graph-Converter" target="_blank"  class="button no_underline centeredsmall">Igor Pro</a>
 					<br>
 					<div>
@@ -120,7 +120,7 @@ title: Plotly API
 
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Enterprise graphing</h6>
-					<a href="{{ site.baseurl }}/javascript-graphing-library"  class="button no_underline centeredsmall">Plotly.js</a>
+					<a href="/javascript-graphing-library"  class="button no_underline centeredsmall">Plotly.js</a>
 					<br>
 					<div>
 						<p>The client-side interactive JavaScript library that powers Plotly.</p>
@@ -150,7 +150,7 @@ title: Plotly API
 
 
 		<!-- Header bar Script -->
-  	<script src="{{ site.baseurl }}/javascripts/smoothheader.js"></script>
+  	<script src="/javascripts/smoothheader.js"></script>
 	
   </body>
 </html>
