add trailing slash to python urls to prevent redirect

--- a/_posts/python/3d-axes/2015-04-16-3d-axes_python_index.html
+++ b/_posts/python/3d-axes/2015-04-16-3d-axes_python_index.html
@@ -1,13 +1,13 @@
 ---
 name: 3D Axes
-permalink: python/3d-axes
+permalink: python/3d-axes/
 description: How to modify axes of 3d graphs
 layout: base
 thumbnail: /images/3d-scatter.png
 language: python
 page_type: example_index
 has_thumbnail: true
-display_as:  
+display_as:
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","3d-axes" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
