--- a/_posts/python/axes/2015-04-09-axes_python_index.html
+++ b/_posts/python/axes/2015-04-09-axes_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Axes
-permalink: python/axes
+permalink: python/axes/
 description: How to adjust axes properties in {language}. {num_categories} examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.
 layout: base
 thumbnail: /images/axes.png
