--- a/_posts/python/latex/2015-04-09-latex_python_index.html
+++ b/_posts/python/latex/2015-04-09-latex_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: LaTeX
-permalink: python/LaTeX
+permalink: python/LaTeX/
 description: How to add LaTeX to {language} graphs.
 layout: base
 thumbnail: /images/latex.png
