--- a/_posts/python/streaming-subsection-placeholder/2015-04-09-streaming-subsection-placeholder_python_index.html
+++ b/_posts/python/streaming-subsection-placeholder/2015-04-09-streaming-subsection-placeholder_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Streaming
-permalink: python/streaming
+permalink: python/streaming/
 description: NO_META_DESCRIPTION!
 layout: base
 thumbnail: /images/streaming-subsection-placeholder.png
