--- a/_posts/python/bar/2015-04-09-bar_python_index.html
+++ b/_posts/python/bar/2015-04-09-bar_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Bar Charts
-permalink: python/bar-charts
+permalink: python/bar-charts/
 description: How to make a bar chart in {language}. {num_categories} examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
 thumbnail: /images/bar.png
