--- a/_posts/python/bubble/2015-04-09-bubble_python_index.html
+++ b/_posts/python/bubble/2015-04-09-bubble_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Bubble Charts
-permalink: python/bubble-charts
+permalink: python/bubble-charts/
 description: How to make a bubble chart in {language}. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
 thumbnail: /images/bubble.png
