--- a/_posts/python/contour/2015-04-09-contour_python_index.html
+++ b/_posts/python/contour/2015-04-09-contour_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Contour Plots
-permalink: python/contour-plots
+permalink: python/contour-plots/
 description: How to make a contour plot in {language}. {num_categories} examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
 layout: base
 thumbnail: /images/contour.png
