--- a/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
+++ b/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Overwriting, Extending, Appending, and Creating New Graphs
-permalink: python/file-options
+permalink: python/file-options/
 description: How to manage your files in {language} with the fileopt parameter.
 layout: base
 thumbnail: /images/fileopt.png
