--- a/_posts/python/font/2015-04-09-font_python_index.html
+++ b/_posts/python/font/2015-04-09-font_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Text and Font Styling
-permalink: python/font
+permalink: python/font/
 description: How to edit and style the font of graphs in {language}.
 layout: base
 thumbnail: /images/font.png
