--- a/_posts/python/get-requests/2015-04-09-get-requests_python_index.html
+++ b/_posts/python/get-requests/2015-04-09-get-requests_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Get Requests
-permalink: python/get-requests
+permalink: python/get-requests/
 description: How to download plotly users's public graphs and data with {language}.
 layout: base
 thumbnail: /images/get-requests.png
