--- a/_posts/python/histogram2d/2015-04-09-histogram2d_python_index.html
+++ b/_posts/python/histogram2d/2015-04-09-histogram2d_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: 2D Histograms
-permalink: python/2D-Histogram
+permalink: python/2D-Histogram/
 description: How to make a 2D histogram in {language}. A 2D histogram is a visualization of a bivariate distribution.
 layout: base
 thumbnail: /images/histogram2d.png
