--- a/_posts/python/insets/2015-04-09-insets_python_index.html
+++ b/_posts/python/insets/2015-04-09-insets_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Inset Plots
-permalink: python/insets
+permalink: python/insets/
 description: How to make an inset graph in {language}.
 layout: base
 thumbnail: /images/insets.png
