--- a/_posts/python/multiple-axes/2015-04-09-multiple-axes_python_index.html
+++ b/_posts/python/multiple-axes/2015-04-09-multiple-axes_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Multiple Axes
-permalink: python/multiple-axes
+permalink: python/multiple-axes/
 description: How to make a graph with multiple axes in {language}.
 layout: base
 thumbnail: /images/multiple-axes.png
