--- a/_posts/python/privacy/2015-04-09-privacy_python_index.html
+++ b/_posts/python/privacy/2015-04-09-privacy_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Public vs Private Graphs
-permalink: python/privacy
+permalink: python/privacy/
 description: How to set the privacy settings of plotly graphs in {language}.
 layout: base
 thumbnail: /images/privacy.png
