--- a/_posts/python/subplots/2015-04-09-subplots_python_index.html
+++ b/_posts/python/subplots/2015-04-09-subplots_python_index.html
@@ -1,6 +1,6 @@
 ---
 name: Subplots
-permalink: python/subplots
+permalink: python/subplots/
 description: How to make subplots in {language}. {num_categories} examples of stacked, custom-sized, and gridded subplots.
 layout: base
 thumbnail: /images/subplots.png
