trailing slash on nodejs pages

--- a/_posts/node_js/bar/2015-04-09-bar_node_js_index.html
+++ b/_posts/node_js/bar/2015-04-09-bar_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Bar Charts
-permalink: nodejs/bar-charts
+permalink: nodejs/bar-charts/
 description: How to make a bar chart in {language}. {num_categories} examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
 thumbnail: /images/bar.png
