--- a/_posts/node_js/insets/2015-04-09-insets_node_js_index.html
+++ b/_posts/node_js/insets/2015-04-09-insets_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Inset Plots
-permalink: nodejs/insets
+permalink: nodejs/insets/
 description: How to make an inset graph in {language}.
 layout: base
 thumbnail: /images/insets.png
