--- a/_posts/node_js/multiple-axes/2015-04-09-multiple-axes_node_js_index.html
+++ b/_posts/node_js/multiple-axes/2015-04-09-multiple-axes_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Multiple Axes
-permalink: nodejs/multiple-axes
+permalink: nodejs/multiple-axes/
 description: How to make a graph with multiple axes in {language}.
 layout: base
 thumbnail: /images/multiple-axes.png
