--- a/_posts/node_js/privacy/2015-04-09-privacy_node_js_index.html
+++ b/_posts/node_js/privacy/2015-04-09-privacy_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Public vs Private Graphs
-permalink: nodejs/privacy
+permalink: nodejs/privacy/
 description: How to set the privacy settings of plotly graphs in {language}.
 layout: base
 thumbnail: /images/privacy.png
