--- a/_posts/node_js/getting-started/2015-05-25-getting-started_node_js_index.html
+++ b/_posts/node_js/getting-started/2015-05-25-getting-started_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Getting Started Plotly for Node.js
-permalink: nodejs/getting-started
+permalink: nodejs/getting-started/
 description: Plotly's Node.js graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
 language: nodejs
