add trailing slash to nodejs examples too

--- a/_posts/nodejs/get-requests/2015-04-09-get-requests_node_js_index.html
+++ b/_posts/nodejs/get-requests/2015-04-09-get-requests_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Get Requests
-permalink: nodejs/get-requests/
+permalink: nodejs/get-requests//
 description: How to download plotly users's public graphs and data with {language}.
 layout: base
 thumbnail: /images/get-requests.png
