--- a/_posts/nodejs/latex/2015-04-09-latex_node_js_index.html
+++ b/_posts/nodejs/latex/2015-04-09-latex_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: LaTeX
-permalink: nodejs/LaTeX/
+permalink: nodejs/LaTeX//
 description: How to add LaTeX to {language} graphs.
 layout: base
 thumbnail: /images/latex.png
