--- a/_posts/nodejs/box/2015-04-09-box_node_js_index.html
+++ b/_posts/nodejs/box/2015-04-09-box_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Box Plots
-permalink: nodejs/box-plots/
+permalink: nodejs/box-plots//
 description: How to make a box plot in {language}. {num_categories} examples of box plots in {language} that are grouped, colored, and display the underlying data distribution.
 layout: base
 thumbnail: /images/box.png
