--- a/_posts/nodejs/bubble/2015-04-09-bubble_node_js_index.html
+++ b/_posts/nodejs/bubble/2015-04-09-bubble_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Bubble Charts
-permalink: nodejs/bubble-charts/
+permalink: nodejs/bubble-charts//
 description: How to make a bubble chart in {language}. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
 thumbnail: /images/bubble.png
