--- a/_posts/nodejs/fileopt/2015-04-09-fileopt_node_js_index.html
+++ b/_posts/nodejs/fileopt/2015-04-09-fileopt_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Overwriting, Extending, Appending, and Creating New Graphs
-permalink: nodejs/file-options/
+permalink: nodejs/file-options//
 description: How to manage your files in {language} with the fileopt parameter.
 layout: base
 thumbnail: /images/fileopt.png
