--- a/_posts/nodejs/heatmap/2015-04-09-heatmap_node_js_index.html
+++ b/_posts/nodejs/heatmap/2015-04-09-heatmap_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Heatmaps
-permalink: nodejs/heatmaps/
+permalink: nodejs/heatmaps//
 description: How to make a heatmap in {language} with a matrix. {num_categories} examples of colored and labeled heatmaps with custom colorscales.
 layout: base
 thumbnail: /images/heatmap.png
