--- a/_posts/nodejs/time-series/2015-04-09-time-series_node_js_index.html
+++ b/_posts/nodejs/time-series/2015-04-09-time-series_node_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Time Series
-permalink: nodejs/time-series/
+permalink: nodejs/time-series//
 description: How to plot date and time in {language}. An example of a time-series plot.
 layout: base
 thumbnail: /images/time-series.png
