--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@ permalink: /api/
     <head>
 
 	<!-- Fonts -->
-	<link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/plotly_icons.css" />
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/fonts/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/plotly_icons.css" />
     <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
 
 
 	<!-- Stytlesheets -->
-	<link rel="stylesheet" type="text/css" href="/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/css/base.css">
-	<link rel="stylesheet" type="text/css" href="/css/layout_block.css">
-	<link rel="stylesheet" type="text/css" href="/css/modules.css">
-	<link rel="stylesheet" type="text/css" href="/css/state.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
+	<link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
 
 	<!-- JQUERY Library -->
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
