--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ permalink: /api/
 	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
 	<!-- Icon -->
-	<link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
 
 	<!-- META TAGS -->
 	{% include seo.html %}
@@ -47,7 +47,7 @@ permalink: /api/
 				<div class="row">
 					<a href="/python/getting-started/"><div class="two columns offset-by-three categories-apis" onmouseover="movingInImgOp(pythonapi_img, pythonapi_text)" onmouseout="movingOutImgOp(pythonapi_img, pythonapi_text)">
 						<div id="pythonapi_img">
-							<img src="/images/python-small.png" alt="python">
+							<img src="{{site.staticurl}}/images/python-small.png" alt="python">
 						</div>
 						<div id="pythonapi_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly Python API</h6>
@@ -55,7 +55,7 @@ permalink: /api/
 					</div></a>
 					<a href="/matlab/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi_img, matlabapi_text)" onmouseout="movingOutImgOp(matlabapi_img, matlabapi_text)">
 						<div id="matlabapi_img">
-							<img src="/images/MATLAB-small.png" alt="MATLAB">
+							<img src="{{site.staticurl}}/images/MATLAB-small.png" alt="MATLAB">
 						</div>
 						<div id="matlabapi_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly MATLAB API</h6>
@@ -63,7 +63,7 @@ permalink: /api/
 					</div></a>
 					<a href="/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r_api_img, r_api_text)" onmouseout="movingOutImgOp(r_api_img, r_api_text)">
 						<div id="r_api_img">
-							<img src="/images/r-small.png" alt="R">
+							<img src="{{site.staticurl}}/images/r-small.png" alt="R">
 						</div>
 						<div id="r_api_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly R API</h6>
