--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ permalink: /api/
 				<!-- SCIENTIFIC GRAPHING -->
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Scientific graphing</h6>
-					<a href="/python" class="button no_underline centeredsmall">Python</a>
-					<a href="/matlab" class="button no_underline centeredsmall">MATLAB</a>
-					<a href="/r"  class="button no_underline centeredsmall">R</a>
-					<a href="/nodejs"  class="button no_underline centeredsmall">Node.js</a>
-					<a href="/julia"  class="button no_underline centeredsmall">Julia</a>
+					<a href="/python/" class="button no_underline centeredsmall">Python</a>
+					<a href="/matlab/" class="button no_underline centeredsmall">MATLAB</a>
+					<a href="/r/"  class="button no_underline centeredsmall">R</a>
+					<a href="/nodejs/"  class="button no_underline centeredsmall">Node.js</a>
+					<a href="/julia/"  class="button no_underline centeredsmall">Julia</a>
 					<a href="https://plot.ly/product/excel-add-in/"  class="button no_underline centeredsmall">Excel</a>
 					<br>
 					<div>
@@ -121,7 +121,7 @@ permalink: /api/
 
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Enterprise graphing</h6>
-					<a href="/javascript-graphing-library"  class="button no_underline centeredsmall">Plotly.js</a>
+					<a href="/javascript-graphing-library/"  class="button no_underline centeredsmall">Plotly.js</a>
 					<br>
 					<div>
 						<p>The client-side interactive JavaScript library that powers Plotly.</p>
