display key button

--- a/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
+++ b/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
@@ -54,7 +54,7 @@ language: julia
 
                 <p >Don't know your API key?
                     <div>
-                        <a href="https://plot.ly/plot" class="button no_underline" id="display_key">Display Key</a>
+                        <a href="https://plot.ly/settings/api" target="blank" class="button no_underline" id="display_key">Display Key</a>
 
 
                     </div>
