--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -34,7 +34,7 @@ language: matlab
                 This will set up your credentials and import the Plotly library into your MATLAB toolboxes. You can now delete the downloaded folder!
             </p>
 			<div>
-			<a class="button no_underline" href="https://plot.ly/plot">DISPLAY KEY</a>
+			<a class="button no_underline" href="https://plot.ly/settings/api" target="blank">DISPLAY KEY</a>
 			</div>
 			<br>
 				<h6>Special Instructions for <a class="no_underline" href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
