--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -52,7 +52,7 @@ $ python -c "import plotly; plotly.tools.set_credentials_file(username='DemoAcco
 
 				<p >Don't know your API key?
                     <div >
-                        <a class="button no_underline" href="https://plot.ly/plot">Display Key</a>
+                        <a class="button no_underline" href="https://plot.ly/settings/api" target="blank">Display Key</a>
 
 
                     </div>
