--- a/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
+++ b/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
@@ -71,7 +71,7 @@ Loading required package: ggplot2</code></pre>
 
             <p>Don't know your API key? If you don't have an account, you will be prompted to sign up.
                     <div >
-                        <a href="https://plot.ly/plot" class="button no_underline">Display Key</a>
+                        <a href="https://plot.ly/settings/api" target="blank" class="button no_underline">Display Key</a>
                     </div>
              </p>
 
