--- a/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
+++ b/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
@@ -40,7 +40,7 @@ language: nodejs
 
                 <p >Don't know your API key? If you don't have an account, you will be prompted to sign up.
                     <div >
-                        <a class="button no_underline" href="https://plot.ly/plot">Display Key</a>
+                        <a class="button no_underline" href="https://plot.ly/settings/api" target="blank">Display Key</a>
 
 
                     </div>
