user guide link updates

--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -39,8 +39,8 @@ py$ggplotly()
     </div>
 
 	<div class="row centered btnrow">
-		<a href="/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="/user-guide/" class="button no_underline">User Guide</a>
+		<a href="/ggplot2/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="https://plot.ly/r/user-guide/" class="button no_underline">User Guide</a>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
