--- a/_posts/2015-04-05-julia-index.html
+++ b/_posts/2015-04-05-julia-index.html
@@ -8,7 +8,7 @@ language: julia
 
 <h1 class="centered">Plotly Julia Library</h1>
 	<div class="row centered btnrow">
-		<a href="/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="/julia/getting-started/" class="button no_underline">Getting Started</a>
 		<a href="https://plot.ly/julia/reference/" class="button no_underline">Reference</a>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
