--- a/_posts/2015-04-05-node_js-index.html
+++ b/_posts/2015-04-05-node_js-index.html
@@ -8,7 +8,7 @@ language: nodejs
 
 <h1 class="centered">Plotly Nodejs Library</h1>
 	<div class="row centered btnrow">
-		<a href="/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="/nodejs/getting-started/" class="button no_underline">Getting Started</a>
 		<a href="https://plot.ly/nodejs/reference/" class="button no_underline">Reference</a>
 	</div>
 
