--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ permalink: /api/
 
 
 		<!-- Header bar Script -->
-  	<script src="/javascripts/smoothheader.js"></script>
+  	<script src="{{site.staticurl}}/javascripts/smoothheader.js"></script>
 
   </body>
 </html>
