--- a/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
+++ b/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
@@ -1,7 +1,7 @@
 ---
 name: Overwriting, Extending, Appending, and Creating New Graphs
 permalink: python/file-options/
-description: How to manage your files in {language} with the fileopt parameter.
+description: How to manage your files in python with the fileopt parameter.
 layout: base
 thumbnail: /images/fileopt.png
 language: python
@@ -9,5 +9,97 @@ page_type: example_index
 has_thumbnail: false
 display_as: file_settings
 ---
-{% assign examples = site.posts | where:"language","python" | where:"suite","fileopt" | sort: "order" %}
-{% include auto_examples.html examples=examples %}
+
+<h4>Overwriting existing graphs and updating a graph at its unique URL</h4>
+
+By default, Plotly will overwrite files made with the same filename:
+
+<pre>import plotly.plotly as py
+from plotly.graph_objs import *
+
+data = Data([
+    Scatter(
+        x=[1, 2],
+        y=[3, 4]
+    )
+])
+
+plot_url = py.plot(data, filename='my plot')</pre>
+
+
+If a graph named 'my plot' already exists in your account, then it will be overwritten
+with this new version and the URL of the graph will persist.
+
+
+<h4>Creating new files</h4>
+
+<pre>import plotly.plotly as py
+from plotly.graph_objs import *
+
+data = Data([
+    Scatter(
+        x=[1, 2],
+        y=[3, 4]
+    )
+])
+
+plot_url = py.plot(data, filename='new plot', fileopt='new')</pre>
+
+With <code>fileopt='new'</code>, Plotly will always create a new file. If a
+file with the same name already exists, then Plotly will append a '(1)' to the end
+of the filename, e.g. <code>new plot (1)</code> and create a unique URL.
+
+
+<h4>Extending traces in an existing graph</h4>
+
+<code>fileopt='extend'</code> will extend existing traces with your new data.
+If you need need to update your graphs in real-time (more frequently than once a minute),
+then <a href="https://plot.ly/python/streaming">use the streaming API</a>.
+
+<h6>Example</h6>
+<pre>import plotly.plotly as py
+from plotly.graph_objs import *
+
+trace0 = Scatter(
+    x=[1, 2],
+    y=[1, 2]
+)
+
+trace1 = Scatter(
+    x=[1, 2],
+    y=[2, 3]
+)
+
+trace2 = Scatter(
+    x=[1, 2],
+    y=[3, 4]
+)
+
+data = Data([trace0, trace1, trace2])
+
+# Take 1: if there is no data in the plot, 'extend' will create new traces.
+plot_url = py.plot(data, filename='extend plot', fileopt='extend')</pre>
+
+Then, extend the traces with more data.
+<pre>import plotly.plotly as py
+from plotly.graph_objs import *
+
+trace0 = Scatter(
+    x=[3, 4],
+    y=[2, 1]
+)
+
+trace1 = Scatter(
+    x=[3, 4],
+    y=[3, 2]
+)
+
+trace2 = Scatter(
+    x=[3, 4],
+    y=[4, 3]
+)
+
+data = Data([trace0, trace1, trace2])
+
+# Take 2: extend the traces on the plot with the data in the order supplied.
+plot_url = py.plot(data, filename='extend plot', fileopt='extend')</pre>
