update fileopt docs

--- a/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
+++ b/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
@@ -1,7 +1,7 @@
 ---
 name: Overwriting, Extending, Appending, and Creating New Graphs
 permalink: python/file-options/
-description: How to manage your files in python with the fileopt parameter.
+description: How to update your graphs in Python with the fileopt parameter.
 layout: base
 thumbnail: /images/fileopt.png
 language: python
@@ -29,6 +29,18 @@ plot_url = py.plot(data, filename='my plot')</pre>
 
 If a graph named 'my plot' already exists in your account, then it will be overwritten
 with this new version and the URL of the graph will persist.
+
+
+<h4>Saving to a folder</h4>
+
+Filenames that contain <code>"/"</code> be treated as a Plotly directory and will be saved to
+your Plotly account in a folder tree.
+
+For example, to save your graphs to the folder <code>my-graphs</code>:
+
+<pre>py.plot(data, filename='my-graphs/my plot')</pre>
+
+If the folder doesn't exist, it will be created.
 
 
 <h4>Creating new files</h4>
