--- a/_posts/julia/fileopt/2015-04-09-fileopt_julia_index.html
+++ b/_posts/julia/fileopt/2015-04-09-fileopt_julia_index.html
@@ -1,7 +1,7 @@
 ---
-name: Overwriting, Extending, Appending, and Creating New Graphs
+name: Overwriting and Updating Plotly Graphs with Julia
 permalink: julia/file-options/
-description: How to manage your files in {language} with the fileopt parameter.
+description: How to manage your graphs in Julia with the fileopt and filename parameter.
 layout: base
 thumbnail: /images/fileopt.png
 language: julia
@@ -9,5 +9,62 @@ page_type: example_index
 has_thumbnail: false
 display_as: file_settings
 ---
-{% assign examples = site.posts | where:"language","julia" | where:"suite","fileopt" | sort: "order" %}
-{% include auto_examples.html examples=examples %}
+
+<h4>Specifying filenames, overwriting files, and updating graphs at their unique URLs</h4>
+
+By default, Plotly will create a new file when you call <code>Plotly.plot</code>.
+To overwrite a graph, include <code>["filename" => "basic-line", "fileopt" => "overwrite"]</code>
+as the last argument:
+
+<pre>using Plotly
+
+trace1 = [
+  "x" => [1, 2, 3, 4],
+  "y" => [10, 15, 13, 17],
+  "type" => "scatter"
+]
+trace2 = [
+  "x" => [1, 2, 3, 4],
+  "y" => [16, 5, 11, 9],
+  "type" => "scatter"
+]
+data = [trace1, trace2]
+response = Plotly.plot(data, ["filename" => "basic-line", "fileopt" => "overwrite"])
+plot_url = response["url"]</pre>
+
+If a graph named "basic-line" already exists in your account, then it will be overwritten
+with this new version and the URL of the graph will persist.
+
+<h4>Saving to a folder</h4>
+
+Filenames that contain <code>"/"</code> be treated as a Plotly directory and will be saved to
+your Plotly account in a folder tree.
+
+For example, to save your graphs to the folder <code>my-graphs</code>:
+
+<pre>Plotly.plot(data, ["filename" => "my-graphs/basic-line", "fileopt" => "overwrite"])</pre>
+
+If the folder doesn't exist, it will be created.
+
+<h4>Creating new files</h4>
+
+<pre>using Plotly
+
+trace1 = [
+  "x" => [1, 2, 3, 4],
+  "y" => [10, 15, 13, 17],
+  "type" => "scatter"
+]
+trace2 = [
+  "x" => [1, 2, 3, 4],
+  "y" => [16, 5, 11, 9],
+  "type" => "scatter"
+]
+data = [trace1, trace2]
+response = Plotly.plot(data, ["filename" => "basic-line", "fileopt" => "new"])
+plot_url = response["url"]</pre>
+
+
+With <code>fileopt='new'</code>, Plotly will always create a new file. If a
+file with the same name already exists, then Plotly will append a '(1)' to the end
+of the filename, e.g. <code>basic-line (1)</code> and create a unique URL.
