--- a/_posts/matlab/fileopt/2015-04-09-fileopt_matlab_index.html
+++ b/_posts/matlab/fileopt/2015-04-09-fileopt_matlab_index.html
@@ -1,7 +1,7 @@
 ---
-name: Overwriting, Extending, Appending, and Creating New Graphs
+name: Overwriting and Updating Plotly Graphs with MATLAB
 permalink: matlab/file-options/
-description: How to manage your files in {language} with the fileopt parameter.
+description: How to update Plotly graphs in MATLAB with the fileopt parameter.
 layout: base
 thumbnail: /images/fileopt.png
 language: matlab
@@ -9,5 +9,54 @@ page_type: example_index
 has_thumbnail: false
 display_as: file_settings
 ---
-{% assign examples = site.posts | where:"language","matlab" | where:"suite","fileopt" | sort: "order" %}
-{% include auto_examples.html examples=examples %}
+
+<h4>Specifying filenames, overwriting files, and updating graphs at their unique URLs</h4>
+
+By default, Plotly will create a new file when you call <code>fig2plotly</code>.
+To overwrite a graph, include <code>'filename', 'my-graph'</code>
+as the last arguments:
+
+<pre>x = linspace(-2*pi,2*pi);
+y1 = sin(x);
+y2 = cos(x);
+
+fig = figure;
+plot(x,y1,x,y2);
+
+response = fig2plotly(fig, 'filename', 'matlab-basic-line');
+plotly_url = response.url;</pre>
+
+If a graph named "matlab-basic-line" already exists in your account, then it will be overwritten
+with this new version and the URL of the graph will persist.
+
+<h4>Saving to a folder</h4>
+
+Filenames that contain <code>"/"</code> be treated as a Plotly directory and will be saved to
+your Plotly account in a folder tree.
+
+For example, to save your graphs to the folder <code>my-graphs</code>:
+
+<pre>fig2plotly(fig, 'filename', 'my-graphs/matlab-basic-line');</pre>
+
+If the folder doesn't exist, it will be created.
+
+<h4>Updating graphs in real-time</h4>
+
+Plotly graphs can also be updated in real-time with MATLAB. For more, see our <a href="https://plot.ly/matlab/streaming/">Streaming API for MATLAB</a>.
+
+<h4>Creating new files</h4>
+
+<pre>x = linspace(-2*pi,2*pi);
+y1 = sin(x);
+y2 = cos(x);
+
+fig = figure;
+plot(x,y1,x,y2);
+
+response = fig2plotly(fig);
+plotly_url = response.url;</pre>
+
+
+Without specifying a filename, Plotly will always create a new file. If a
+file with the same name already exists, then Plotly will append a '(1)' to the end
+of the filename, e.g. <code>basic-line (1)</code> and create a unique URL.
