--- a/_posts/r/fileopt/2015-04-09-fileopt_r_index.html
+++ b/_posts/r/fileopt/2015-04-09-fileopt_r_index.html
@@ -1,7 +1,7 @@
 ---
 name: Overwriting, Extending, Appending, and Creating New Graphs
 permalink: r/file-options/
-description: How to manage your files in {language} with the fileopt parameter.
+description: How to update your graphs in R with the fileopt parameter.
 layout: base
 thumbnail: /images/fileopt.png
 language: r
@@ -9,5 +9,66 @@ page_type: example_index
 has_thumbnail: false
 display_as: file_settings
 ---
-{% assign examples = site.posts | where:"language","r" | where:"suite","fileopt" | sort: "order" %}
-{% include auto_examples.html examples=examples %}
+
+
+<h4>Specifying filenames, overwriting files, and updating graphs at their unique URLs</h4>
+
+By default, Plotly will create a new file when you call <code>py$plotly</code>.
+To overwrite a graph, include <code>kwargs=list(filename="my file", fileopt="overwrite")</code>
+as an argument:
+
+<pre>library(plotly)
+
+py &lt;- plotly()
+trace1 &lt;- list(
+  x = c(1, 2, 3, 4),
+  y = c(10, 15, 13, 17),
+  type = "scatter"
+)
+trace2 &lt;- list(
+  x = c(1, 2, 3, 4),
+  y = c(16, 5, 11, 9),
+  type = "scatter"
+)
+data &lt;- list(trace1, trace2)
+response &lt;- py$plotly(data, kwargs=list(filename="basic-line", fileopt="overwrite"))
+url &lt;- response$url</pre>
+
+If a graph named "basic-line" already exists in your account, then it will be overwritten
+with this new version and the URL of the graph will persist.
+
+<h4>Saving to a folder</h4>
+
+Filenames that contain <code>"/"</code> be treated as a Plotly directory and will be saved to
+your Plotly account in a folder tree.
+
+For example, to save your graphs to the folder <code>my-graphs</code>:
+
+<pre>response &lt;- py$plotly(data, kwargs=list(filename="my-graphs/basic-line", fileopt="overwrite"))</pre>
+
+If the folder doesn't exist, it will be created.
+
+<h4>Creating new files</h4>
+
+<pre>library(plotly)
+
+py &lt;- plotly()
+trace1 &lt;- list(
+  x = c(1, 2, 3, 4),
+  y = c(10, 15, 13, 17),
+  type = "scatter"
+)
+trace2 &lt;- list(
+  x = c(1, 2, 3, 4),
+  y = c(16, 5, 11, 9),
+  type = "scatter"
+)
+data &lt;- list(trace1, trace2)
+response &lt;- py$plotly(data, kwargs=list(filename="basic line", fileopt="new"))
+url &lt;- response$url</pre>
+
+
+With <code>fileopt='new'</code>, Plotly will always create a new file. If a
+file with the same name already exists, then Plotly will append a '(1)' to the end
+of the filename, e.g. <code>basic line (1)</code> and create a unique URL.
+
